--- a/testing/templates/testing.html
+++ b/testing/templates/testing.html
@@ -7,5 +7,11 @@
     <textarea class="answer editable" cols="66" rows="22" name=${content[name]}>${box_text}</textarea>
 %endfor
 </ul>
-<button id='submit'>Submit</button>
+<div class="xblock-actions" style="margin-top:20px;height:30px;">
+        <span class="error-message"></span>
+            <div class="action-item">
+                <a href="#" class="send-button" style="float:left;">Send</a>
+            </div>
+</div>
+<!--<button id='submit'>Submit</button>-->
 </object>
