fix studio view

--- a/testing/templates/testing_edit.html
+++ b/testing/templates/testing_edit.html
@@ -14,14 +14,14 @@
         <input type="url" class="href input setting-input" id="href" value="${href|h}"/>
       </div>
     </li>
-
- <div class="xblock-actions">
+  </ul>
+ <div> class="xblock-actions">
     <ul>
       <li class="action-item">
-        <button class="button action-primary save-button">Save</button>
+          <a href="#" class="save-button action-primary action">Save</a>
       </li>
       <li class="action-item">
-        <button class="button cancel-button">Cancel</button>
+          <a href="#" class="button cancel-button">Cancel</a>
       </li>
     </ul>
   </div>
